--- a/Borgen/BorgenCell.xib
+++ b/Borgen/BorgenCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUIImageView" id="150068934">
 								<reference key="NSNextResponder" ref="672783000"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 16}, {59, 59}}</string>
+								<string key="NSFrame">{{20, 11}, {44, 44}}</string>
 								<reference key="NSSuperview" ref="672783000"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -55,7 +55,7 @@
 							<object class="IBUILabel" id="455184731">
 								<reference key="NSNextResponder" ref="672783000"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 16}, {154, 21}}</string>
+								<string key="NSFrame">{{72, 11}, {154, 21}}</string>
 								<reference key="NSSuperview" ref="672783000"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -90,7 +90,7 @@
 							<object class="IBUILabel" id="907207844">
 								<reference key="NSNextResponder" ref="672783000"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{93, 54}, {142, 21}}</string>
+								<string key="NSFrame">{{72, 34}, {142, 21}}</string>
 								<reference key="NSSuperview" ref="672783000"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -118,7 +118,7 @@
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrameSize">{300, 90}</string>
+						<string key="NSFrameSize">{300, 66}</string>
 						<reference key="NSSuperview" ref="497297659"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
@@ -133,7 +133,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 91}</string>
+				<string key="NSFrameSize">{320, 67}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="672783000"/>
@@ -146,7 +146,7 @@
 				<int key="IBUIAccessoryType">1</int>
 				<reference key="IBUIContentView" ref="672783000"/>
 				<string key="IBUIReuseIdentifier">BorgenCell</string>
-				<real value="91" key="IBUIRowHeight"/>
+				<real value="67" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -199,7 +199,6 @@
 						<int key="objectID">2</int>
 						<reference key="object" ref="497297659"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="150068934"/>
 							<object class="IBNSLayoutConstraint" id="977908991">
 								<reference key="firstItem" ref="907207844"/>
 								<int key="firstAttribute">4</int>
@@ -216,21 +215,53 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="188457393">
+							<object class="IBNSLayoutConstraint" id="647674824">
 								<reference key="firstItem" ref="907207844"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="455184731"/>
-								<int key="secondAttribute">5</int>
+								<reference key="secondItem" ref="150068934"/>
+								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">8</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="497297659"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="534068623">
+								<reference key="firstItem" ref="455184731"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="497297659"/>
+								<int key="secondAttribute">5</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">72</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="497297659"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="220640640">
+								<reference key="firstItem" ref="455184731"/>
+								<int key="firstAttribute">5</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="150068934"/>
+								<int key="secondAttribute">6</int>
+								<float key="multiplier">1</float>
+								<object class="IBNSLayoutSymbolicConstant" key="constant">
+									<double key="value">8</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="497297659"/>
+								<int key="scoringType">6</int>
+								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="432625776">
 								<reference key="firstItem" ref="455184731"/>
@@ -248,37 +279,21 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="871423198">
-								<reference key="firstItem" ref="455184731"/>
-								<int key="firstAttribute">5</int>
+							<object class="IBNSLayoutConstraint" id="797518498">
+								<reference key="firstItem" ref="150068934"/>
+								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="497297659"/>
-								<int key="secondAttribute">5</int>
+								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">93</double>
+									<double key="value">11</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="497297659"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="892253406">
-								<reference key="firstItem" ref="150068934"/>
-								<int key="firstAttribute">10</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="497297659"/>
-								<int key="secondAttribute">10</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="497297659"/>
-								<int key="scoringType">5</int>
-								<float key="scoringTypeFloat">22</float>
-								<int key="contentType">2</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="994418818">
 								<reference key="firstItem" ref="150068934"/>
@@ -296,6 +311,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
+							<reference ref="150068934"/>
 							<reference ref="455184731"/>
 							<reference ref="907207844"/>
 						</array>
@@ -305,23 +321,7 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="150068934"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="918603567">
-								<reference key="firstItem" ref="150068934"/>
-								<int key="firstAttribute">7</int>
-								<int key="relation">0</int>
-								<nil key="secondItem"/>
-								<int key="secondAttribute">0</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">59</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="150068934"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">1</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="601363313">
+							<object class="IBNSLayoutConstraint" id="660346488">
 								<reference key="firstItem" ref="150068934"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
@@ -329,7 +329,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">59</double>
+									<double key="value">44</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="150068934"/>
@@ -423,37 +423,37 @@
 						<reference key="parent" ref="907207844"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">65</int>
-						<reference key="object" ref="892253406"/>
-						<reference key="parent" ref="497297659"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">66</int>
-						<reference key="object" ref="601363313"/>
+						<int key="objectID">75</int>
+						<reference key="object" ref="660346488"/>
 						<reference key="parent" ref="150068934"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">67</int>
-						<reference key="object" ref="918603567"/>
-						<reference key="parent" ref="150068934"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">69</int>
-						<reference key="object" ref="871423198"/>
+						<int key="objectID">83</int>
+						<reference key="object" ref="797518498"/>
 						<reference key="parent" ref="497297659"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">70</int>
+						<int key="objectID">85</int>
 						<reference key="object" ref="432625776"/>
 						<reference key="parent" ref="497297659"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">71</int>
-						<reference key="object" ref="188457393"/>
+						<int key="objectID">86</int>
+						<reference key="object" ref="220640640"/>
 						<reference key="parent" ref="497297659"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">72</int>
+						<int key="objectID">87</int>
+						<reference key="object" ref="534068623"/>
+						<reference key="parent" ref="497297659"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">88</int>
+						<reference key="object" ref="647674824"/>
+						<reference key="parent" ref="497297659"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">89</int>
 						<reference key="object" ref="977908991"/>
 						<reference key="parent" ref="497297659"/>
 					</object>
@@ -479,34 +479,34 @@
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="2.IBViewMetadataConstraints">
 					<reference ref="994418818"/>
-					<reference ref="892253406"/>
-					<reference ref="871423198"/>
+					<reference ref="797518498"/>
 					<reference ref="432625776"/>
-					<reference ref="188457393"/>
+					<reference ref="220640640"/>
+					<reference ref="534068623"/>
+					<reference ref="647674824"/>
 					<reference ref="977908991"/>
 				</array>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array class="NSMutableArray" key="3.IBViewMetadataConstraints">
-					<reference ref="601363313"/>
-					<reference ref="918603567"/>
+					<reference ref="660346488"/>
 				</array>
 				<boolean value="NO" key="3.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="65.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="66.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="67.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="69.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="70.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="71.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="75.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="86.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="87.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="88.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="89.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">72</int>
+			<int key="maxID">89</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
